# datajockey

./: .gitignore  .gitmodules  .qmake.conf  .syntastic_cpp_config  .travis.yml  BUGS  Makefile  Makefile-audio  README  README.md  TODO  application.pro  config-default.yaml  config.yaml  datajockey.pro  datajockey.qrc  db.qrc  gui.qrc  importer.pro  midimap-faderfox.yaml  style.qss
app/: app.pro  audiofileinfoextractor.cpp  audiofileinfoextractor.h  audiofiletag.cpp  audiofiletag.h  audiolevelview.cpp  audiolevelview.h  audioloader.cpp  audioloader.h  audiomodel.cpp  audiomodel.h  beatextractor.cpp  beatextractor.h  config.cpp  config.hpp  db.cpp  db.h  defines.cpp  defines.hpp  historymanager.cpp  historymanager.h  loaderthread.cpp  loaderthread.h  loopandjumpcontrolview.cpp  loopandjumpcontrolview.h  loopandjumpcontrolview.ui  loopandjumpmanager.cpp  loopandjumpmanager.h  lv2pluginview.cpp  lv2pluginview.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  midirouter.cpp  midirouter.h  mixerpanelview.cpp  mixerpanelview.h  mixerpanelview.ui  mixerpanelwaveformsview.cpp  (+32 more)
app/audio/: annotation.cpp  annotation.hpp  audiobuffer.cpp  audiobuffer.hpp  audioio.cpp  audioio.hpp  beatbuffer.cpp  beatbuffer.hpp  command.cpp  command.hpp  doublelinkedlist.cpp  doublelinkedlist.h  doublelinkedlist.hpp  envelope.cpp  envelope.hpp  lv2plugin.cpp  lv2plugin.h  master.cpp  master.hpp  player.cpp  player.hpp  plugin.cpp  plugin.h  pluginmanager.cpp  pluginmanager.h  scheduledataparser.hpp  schedulenode.cpp  schedulenode.hpp  scheduler.cpp  scheduler.hpp  soundfile.cpp  soundfile.hpp  stretcher.cpp  stretcher.hpp  stretcherrate.cpp  stretcherrate.hpp  timepoint.cpp  timepoint.hpp  transport.cpp  transport.hpp  (+2 more)
audio/: .gitignore  Makefile
audio/doc/: schedulefileformat.txt
audio/include/: audiobuffer.hpp  beatbuffer.hpp  master.hpp  player.hpp  stretcher.hpp  stretcher_rate.hpp  timepoint.hpp
audio/src/: audiobuffer.cpp  audioio.cpp  beatbuffer.cpp  main.cpp  master.cpp  player.cpp  scheduler.cpp  soundfile.cpp  stretcher.cpp  stretcher_rate.cpp  timepoint.cpp  transport.cpp
audio/wrapper/: .gitignore  CMakeLists.txt  datajockey_audio_server.pro  notes.txt
audio/wrapper/include/: audiobufferreference.hpp  audiocontroller.hpp  audioloaderthread.hpp
audio/wrapper/moc/: moc_audiocontroller.cpp  moc_audioloaderthread.cpp
audio/wrapper/smoke/: datajockey_audio_smoke.h  smoke.h  smokeconfig.xml
audio/wrapper/src/: audiobufferreference.cpp  audiocontroller.cpp  audioloaderthread.cpp  datajockey_audio.cpp  main.cpp
controller/include/: audiocontroller.hpp
controller/src/: audiobufferreference.cpp  audiocontroller.cpp  audioloaderthread.cpp
doc/: schedulefileformat.txt
ext/: .gitignore
ext/lv2/: symap.h  uridmap.h
gui/: Gemfile  datajockey.rb  style.css
gui/ext/: .gitignore  CMakeLists.txt  test.cpp  test.rb
gui/ext/datajockey/: datajockey_view_internal.rb
gui/ext/include/: waveformitem.hpp  waveformview.hpp
gui/ext/smoke/: datajockey_view_includes.h  datajockey_view_smoke.h  gen.sh  smokeconfig.xml
gui/ext/src/: datajockey_view.cpp  waveformitem.cpp  waveformview.cpp
gui/lib/: observer_utils.rb  qt.rb
gui/model/: beatbuffer.rb
gui/view/: mixerpanel.rb  player.rb  waveform.rb
importer/: fileprocessor.cpp  fileprocessor.h  importer.pro  main.cpp
include/: application.hpp  audiobuffer.hpp  audioio.hpp  audiomodel.hpp  beatbuffer.hpp  command.hpp  config.hpp  defines.hpp  importer_app.hpp  importerapp.hpp  master.hpp  mixer.hpp  player.hpp  scheduledataparser.hpp  schedulenode.hpp  scheduler.hpp  soundfile.hpp  timepoint.hpp  transport.hpp  types.hpp
include/audio/: annotation.hpp  audiobuffer.hpp  audioio.hpp  beatbuffer.hpp  command.hpp  master.hpp  player.hpp  scheduledataparser.hpp  schedulenode.hpp  scheduler.hpp  soundfile.hpp  stretcher.hpp  stretcherrate.hpp  timepoint.hpp  transport.hpp  types.hpp
include/controller/: audiobufferreference.hpp  audiocontroller.hpp  audioloaderthread.hpp  history_manager.hpp  loaderthread.hpp  midimapper.hpp  oscreceiver.hpp  oscsender.hpp  playermapper.hpp
include/model/: audiomodel.hpp  db.hpp  workfiltermodel.hpp  workfiltermodelcollection.hpp  workrelationmodel.hpp
include/old/: defaultworkfilters.hpp  oscreceiver.hpp  oscsender.hpp  tageditor.hpp  tagmodel.hpp  tagview.hpp  treeitem.h  treemodel.h  workdbview.hpp  workdetailview.hpp  workfilterlist.hpp  workfilterlistview.hpp  workfiltermodel.hpp  workloader.hpp  workpreviewer.hpp  worktablemodel.hpp  worktagmodelfilter.hpp
include/util/: audiofiletag.hpp  beatextractor.hpp  importer.hpp
include/view/: appmainwindow.hpp  audiolevel.hpp  filtereddbview.hpp  midimappingview.hpp  mixerpanel.hpp  player_view.hpp  playerview.hpp  renameabletabbar.hpp  waveformitem.hpp  waveformview.hpp  waveformviewgl.hpp  workstabview.hpp
moc/: moc_audiomodel.cpp
resources/: datajockey.sqlite3  style.qss
resources/text/: about.html
ruby/: Gemfile  Rakefile  console  datajockey_importer  default_db.yaml
ruby/datajockey/: applicationmodel.rb  base.rb  db.rb  interpreter.rb  mixerchannelmodel.rb  mixerpannelmodel.rb  workfilter.rb
ruby/db/: schema.rb
src/: application.cpp  audiobuffer.cpp  audioio.cpp  audiomodel.cpp  beatbuffer.cpp  command.cpp  config.cpp  defines.cpp  importer_app.cpp  importerapp.cpp  main.cpp  master.cpp  mixer.cpp  player.cpp  schedulenode.cpp  scheduler.cpp  soundfile.cpp  timepoint.cpp  transport.cpp
wrapper/: .gitignore  CMakeLists.txt
(+148 files in other folders)
